--- a/index.html
+++ b/index.html
@@ -5,11 +5,128 @@
     <title>MerisuShop | Bricks & Lego</title>
     <meta name="description" content="MerisuShop – yaratıcı ve eğlenceli bricks lego ürünleri.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        header {
+            background-color: #e10600;
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: white;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin-left: 20px;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            background-color: #ffd500;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        .hero h2 {
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 18px;
+        }
+
+        section {
+            padding: 50px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+
+        section h3 {
+            color: #e10600;
+            margin-bottom: 15px;
+        }
+
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        footer a {
+            color: #ffd500;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 
+<header>
     <h1>MerisuShop</h1>
-    <p>Bricks & Lego ürünleri yakında burada!</p>
+    <nav>
+        <a href="#anasayfa">Anasayfa</a>
+        <a href="#hakkimizda">Hakkımızda</a>
+        <a href="#urunler">Ürünler</a>
+        <a href="#sepet">Sepet</a>
+        <a href="#iletisim">İletişim</a>
+    </nav>
+</header>
+
+<div class="hero" id="anasayfa">
+    <h2>Hayal Gücünü İnşa Et</h2>
+    <p>En eğlenceli bricks & lego ürünleri MerisuShop’ta</p>
+</div>
+
+<section id="hakkimizda">
+    <h3>Hakkımızda</h3>
+    <p>
+        MerisuShop, çocuklardan koleksiyonerlere kadar herkes için
+        yaratıcı ve eğlenceli bricks lego ürünlerini sunar.
+    </p>
+</section>
+
+<section id="urunler">
+    <h3>Ürünler</h3>
+    <p>Ürünler yakında burada listelenecek.</p>
+</section>
+
+<section id="sepet">
+    <h3>Sepet</h3>
+    <p>Sepetiniz şu an boş.</p>
+</section>
+
+<section id="iletisim">
+    <h3>İletişim</h3>
+    <p>📧 mail@merisushop.com</p>
+    <p>
+        <a href="#">Instagram</a> |
+        <a href="#">TikTok</a> |
+        <a href="#">X</a>
+    </p>
+</section>
+
+<footer>
+    © 2026 MerisuShop
+</footer>
 
 </body>
 </html>
