--- a/index.html
+++ b/index.html
@@ -10,71 +10,79 @@
         body {
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #f4f4f5;
+            color: #111;
         }
 
         header {
-            background-color: #e10600;
-            padding: 15px 30px;
+            background-color: #000;
+            padding: 16px 32px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: white;
         }
 
         header h1 {
             margin: 0;
             font-size: 24px;
+            color: white;
         }
 
         nav a {
             color: white;
             text-decoration: none;
-            margin-left: 20px;
-            font-weight: bold;
+            margin-left: 22px;
+            font-weight: 600;
         }
 
         nav a:hover {
-            text-decoration: underline;
+            color: #7c3aed;
         }
 
         .hero {
-            background-color: #ffd500;
-            padding: 60px 20px;
+            background: linear-gradient(135deg, #7c3aed, #a855f7);
+            color: white;
+            padding: 70px 20px;
             text-align: center;
         }
 
         .hero h2 {
-            font-size: 36px;
-            margin-bottom: 10px;
+            font-size: 38px;
+            margin-bottom: 12px;
         }
 
         .hero p {
             font-size: 18px;
+            opacity: 0.95;
         }
 
         section {
-            padding: 50px 20px;
+            padding: 60px 20px;
             max-width: 1000px;
             margin: auto;
         }
 
         section h3 {
-            color: #e10600;
-            margin-bottom: 15px;
+            color: #7c3aed;
+            margin-bottom: 14px;
+            font-size: 26px;
         }
 
         footer {
-            background-color: #222;
-            color: white;
+            background-color: #000;
+            color: #aaa;
             text-align: center;
-            padding: 20px;
+            padding: 24px;
         }
 
         footer a {
-            color: #ffd500;
+            color: #a855f7;
             margin: 0 10px;
             text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -93,25 +101,25 @@
 
 <div class="hero" id="anasayfa">
     <h2>Hayal Gücünü İnşa Et</h2>
-    <p>En eğlenceli bricks & lego ürünleri MerisuShop’ta</p>
+    <p>Bricks & Lego dünyasının modern adresi</p>
 </div>
 
 <section id="hakkimizda">
     <h3>Hakkımızda</h3>
     <p>
-        MerisuShop, çocuklardan koleksiyonerlere kadar herkes için
-        yaratıcı ve eğlenceli bricks lego ürünlerini sunar.
+        MerisuShop, yaratıcılığı destekleyen modern bricks lego ürünlerini
+        herkes için erişilebilir hale getirmeyi amaçlar.
     </p>
 </section>
 
 <section id="urunler">
     <h3>Ürünler</h3>
-    <p>Ürünler yakında burada listelenecek.</p>
+    <p>Ürünler çok yakında burada listelenecek.</p>
 </section>
 
 <section id="sepet">
     <h3>Sepet</h3>
-    <p>Sepetiniz şu an boş.</p>
+    <p>Sepetinizde henüz ürün yok.</p>
 </section>
 
 <section id="iletisim">
