--- a/index.html
+++ b/index.html
@@ -1,183 +1,168 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>Bricks Legolar | Merisu Shop</title>
-    <meta name="description" content="Bricks Legolar kategorisinde en yeni setler. Hepsi 200 TL. Hızlı ve animasyonlu alışveriş.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>MerisuShop | Bricks Legolar</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Bricks Legolar – Her biri 200 TL. Eğlenceli ve kaliteli setler.">
 
-    <style>
-        * {
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+<style>
+*{box-sizing:border-box;font-family:Arial}
+body{margin:0;background:#0d0d0d;color:#fff}
 
-        body {
-            margin: 0;
-            background: linear-gradient(135deg, #1a1a1a, #2b0033);
-            color: #fff;
-        }
+header{
+display:flex;justify-content:space-between;align-items:center;
+padding:20px;background:#000;border-bottom:2px solid #c77dff
+}
+header h1{color:#c77dff}
+.cart{cursor:pointer;font-size:22px;position:relative}
+.cart span{
+position:absolute;top:-8px;right:-10px;
+background:#c77dff;color:#000;
+border-radius:50%;padding:2px 7px;font-size:12px;font-weight:bold
+}
 
-        header {
-            padding: 25px;
-            text-align: center;
-            background: #000;
-            border-bottom: 2px solid #ff4fd8;
-        }
+.container{max-width:1200px;margin:auto;padding:40px 20px}
+.category{font-size:28px;margin-bottom:25px;border-left:5px solid #ff6ec7;padding-left:15px}
 
-        header h1 {
-            margin: 0;
-            color: #ff4fd8;
-        }
+.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:25px}
 
-        header p {
-            color: #ccc;
-            margin-top: 5px;
-        }
+.product{
+background:#111;border-radius:16px;padding:15px;text-align:center;
+transition:.3s;cursor:pointer
+}
+.product:hover{transform:translateY(-6px);box-shadow:0 0 20px #c77dff}
 
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 40px 20px;
-        }
+.product img{width:100%;border-radius:12px}
+.price{color:#ff6ec7;font-size:20px;margin:10px 0;font-weight:bold}
 
-        .category-title {
-            font-size: 28px;
-            margin-bottom: 30px;
-            border-left: 5px solid #b84dff;
-            padding-left: 15px;
-        }
+button{
+background:linear-gradient(135deg,#ff6ec7,#c77dff);
+border:none;color:#fff;padding:10px 18px;
+border-radius:30px;cursor:pointer
+}
 
-        .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-            gap: 25px;
-        }
+.modal{
+display:none;position:fixed;top:0;left:0;width:100%;height:100%;
+background:rgba(0,0,0,.85);justify-content:center;align-items:center
+}
 
-        .product {
-            background: #111;
-            border-radius: 16px;
-            padding: 15px;
-            text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s;
-            box-shadow: 0 0 0 rgba(255, 79, 216, 0);
-        }
+.modal-content{
+background:#111;padding:25px;border-radius:16px;
+max-width:400px;width:90%;text-align:center
+}
 
-        .product:hover {
-            transform: translateY(-8px) scale(1.02);
-            box-shadow: 0 0 25px rgba(255, 79, 216, 0.4);
-        }
+.toast{
+position:fixed;bottom:25px;right:25px;
+background:#000;padding:15px 20px;border-left:4px solid #ff6ec7;
+border-radius:10px;opacity:0;transition:.4s
+}
+.toast.show{opacity:1}
 
-        .product img {
-            width: 100%;
-            border-radius: 12px;
-            margin-bottom: 15px;
-        }
-
-        .product h3 {
-            margin: 10px 0 5px;
-        }
-
-        .product p {
-            font-size: 14px;
-            color: #bbb;
-        }
-
-        .price {
-            font-size: 20px;
-            margin: 12px 0;
-            color: #ff4fd8;
-            font-weight: bold;
-        }
-
-        .add-cart {
-            background: linear-gradient(135deg, #ff4fd8, #b84dff);
-            border: none;
-            color: #fff;
-            padding: 12px 20px;
-            border-radius: 30px;
-            cursor: pointer;
-            font-size: 15px;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        .add-cart:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 15px rgba(184, 77, 255, 0.8);
-        }
-
-        .add-cart:active {
-            transform: scale(0.95);
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #000;
-            margin-top: 40px;
-            color: #777;
-        }
-    </style>
+footer{text-align:center;padding:20px;background:#000;color:#777}
+</style>
 </head>
 
 <body>
 
 <header>
-    <h1>Merisu Shop</h1>
-    <p>Bricks Legolar Kategorisi</p>
+<h1>MerisuShop</h1>
+<div class="cart" onclick="openCart()">🛒 <span id="cartCount">0</span></div>
 </header>
 
 <div class="container">
-    <div class="category-title">🧱 Bricks Legolar</div>
-
-    <div class="products">
-
-        <div class="product">
-            <img src="bricks-set-1.jpg" alt="Bricks Lego Set 1">
-            <h3>Bricks Lego Set 1</h3>
-            <p>Yaratıcılığını konuşturabileceğin özel lego seti.</p>
-            <div class="price">200 TL</div>
-            <button class="add-cart">Sepete Ekle</button>
-        </div>
-
-        <div class="product">
-            <img src="bricks-set-2.jpg" alt="Bricks Lego Set 2">
-            <h3>Bricks Lego Set 2</h3>
-            <p>Detaylı parçalarla eğlenceli bir deneyim.</p>
-            <div class="price">200 TL</div>
-            <button class="add-cart">Sepete Ekle</button>
-        </div>
-
-        <div class="product">
-            <img src="bricks-set-3.jpg" alt="Bricks Lego Set 3">
-            <h3>Bricks Lego Set 3</h3>
-            <p>Hem koleksiyon hem oyun için ideal.</p>
-            <div class="price">200 TL</div>
-            <button class="add-cart">Sepete Ekle</button>
-        </div>
-
-        <div class="product">
-            <img src="bricks-set-4.jpg" alt="Bricks Lego Set 4">
-            <h3>Bricks Lego Set 4</h3>
-            <p>Modern tasarım, maksimum eğlence.</p>
-            <div class="price">200 TL</div>
-            <button class="add-cart">Sepete Ekle</button>
-        </div>
-
-        <div class="product">
-            <img src="bricks-set-5.jpg" alt="Bricks Lego Set 5">
-            <h3>Bricks Lego Set 5</h3>
-            <p>Yüksek kalite parçalarla özel set.</p>
-            <div class="price">200 TL</div>
-            <button class="add-cart">Sepete Ekle</button>
-        </div>
-
-    </div>
+<div class="category">🧱 Bricks Legolar</div>
+<div class="products" id="products"></div>
 </div>
 
-<footer>
-    © 2026 Merisu Shop — Tüm hakları saklıdır.
-</footer>
+<!-- ÜRÜN DETAY -->
+<div class="modal" id="detailModal">
+<div class="modal-content">
+<h2 id="detailTitle"></h2>
+<img id="detailImg" style="width:100%;border-radius:12px">
+<p>Kaliteli, eğitici ve eğlenceli bricks lego seti.</p>
+<div class="price">200 TL</div>
+<button onclick="addToCart()">Sepete Ekle</button><br><br>
+<button onclick="closeModal()">Kapat</button>
+</div>
+</div>
+
+<!-- SEPET -->
+<div class="modal" id="cartModal">
+<div class="modal-content">
+<h2>🛒 Sepet</h2>
+<p id="cartItems"></p>
+<p><b>Toplam:</b> <span id="total">0</span> TL</p>
+<button onclick="fakePay()">Ödemeye Geç</button><br><br>
+<button onclick="closeModal()">Kapat</button>
+</div>
+</div>
+
+<div class="toast" id="toast">✔ Ürün sepete eklendi</div>
+
+<footer>© 2026 MerisuShop</footer>
+
+<script>
+const products=[
+{ id:1,name:"Bricks Lego Set 1",img:"bricks-set-1.jpg"},
+{ id:2,name:"Bricks Lego Set 2",img:"bricks-set-2.jpg"},
+{ id:3,name:"Bricks Lego Set 3",img:"bricks-set-3.jpg"},
+{ id:4,name:"Bricks Lego Set 4",img:"bricks-set-4.jpg"},
+{ id:5,name:"Bricks Lego Set 5",img:"bricks-set-5.jpg"}
+];
+
+let cart=JSON.parse(localStorage.getItem("cart"))||[];
+
+const container=document.getElementById("products");
+products.forEach(p=>{
+container.innerHTML+=`
+<div class="product" onclick="openDetail('${p.name}','${p.img}')">
+<img src="${p.img}">
+<h3>${p.name}</h3>
+<div class="price">200 TL</div>
+</div>`;
+});
+
+updateCart();
+
+function openDetail(name,img){
+document.getElementById("detailTitle").innerText=name;
+document.getElementById("detailImg").src=img;
+document.getElementById("detailModal").style.display="flex";
+}
+
+function openCart(){
+document.getElementById("cartModal").style.display="flex";
+document.getElementById("cartItems").innerText=`${cart.length} ürün`;
+document.getElementById("total").innerText=cart.length*200;
+}
+
+function closeModal(){
+document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+}
+
+function addToCart(){
+cart.push(200);
+localStorage.setItem("cart",JSON.stringify(cart));
+updateCart();
+showToast();
+closeModal();
+}
+
+function updateCart(){
+document.getElementById("cartCount").innerText=cart.length;
+}
+
+function showToast(){
+const t=document.getElementById("toast");
+t.classList.add("show");
+setTimeout(()=>t.classList.remove("show"),2000);
+}
+
+function fakePay(){
+alert("Ödeme sistemi yakında aktif edilecek 🙂");
+}
+</script>
 
 </body>
 </html>
