--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ footer{text-align:center;padding:20px;background:#000;color:#777}
 
 <script>
 const products=[
-{ id:1,name:"Bricks Lego Set 1",img:"bricks-set-1.jpg"},
-{ id:2,name:"Bricks Lego Set 2",img:"bricks-set-2.jpg"},
-{ id:3,name:"Bricks Lego Set 3",img:"bricks-set-3.jpg"},
-{ id:4,name:"Bricks Lego Set 4",img:"bricks-set-4.jpg"},
-{ id:5,name:"Bricks Lego Set 5",img:"bricks-set-5.jpg"}
+{ id:1,name:"Bricks Lego Set 1",img:"merisushop-images/bricks-set-1.jpg"},
+{ id:2,name:"Bricks Lego Set 2",img:"merisushop-images/bricks-set-2.jpg"},
+{ id:3,name:"Bricks Lego Set 3",img:"merisushop-images/bricks-set-3.jpg"},
+{ id:4,name:"Bricks Lego Set 4",img:"merisushop-images/bricks-set-4.jpg"},
+{ id:5,name:"Bricks Lego Set 5",img:"merisushop-images/bricks-set-5.jpg"}
 ];
 
 let cart=JSON.parse(localStorage.getItem("cart"))||[];
